# acria-substrate

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
assets/: bytecodes.json  chain_spec_testnet.json  types.json
doc/: balance-transfers.md  create-accounts.md  run-node.md  rust-setup.md
modules/currencies/: Cargo.toml
modules/currencies/src/: lib.rs  mock.rs
modules/evm/: Cargo.toml
modules/evm-accounts/: Cargo.toml
modules/evm-accounts/src/: lib.rs  mock.rs
modules/evm-bridge/: Cargo.toml
modules/evm/rpc/: Cargo.toml
modules/evm/rpc/runtime_api/: Cargo.toml
modules/evm/src/: mock.rs
modules/poc/: Cargo.toml
modules/poc/src/: benchmarking.rs  tests.rs  weights.rs
modules/support/: Cargo.toml
modules/transaction_payment/: Cargo.toml
modules/transaction_payment/src/: lib.rs  mock.rs  tests.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
oracle-node/: README.md  acria-oracle-bridge.html  acria-oracle-bridge.js  acria-oracle-node.conf  acria-oracle-node.conf.test  acria-oracle-node.js  acria-oracle-node.key  b64.txt  package-lock.json  package.json
pallets/acria/: Cargo.toml
pallets/acria/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs  tests.rs
rpc/: nginx.conf  rpc.py
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/precompile/: input.rs  mock.rs  tests.rs
runtime/src/: lib.rs
runtime/src/benchmarking/: evm.rs  evm_accounts.rs  utils.rs
runtime/tests/: integration_test.rs
stakers-ui/: README.md  package.json  stakers.html  stakers.js
