[package]
authors = ['Poseidon - Acria Network <poseidon@acria.network>']
build = 'build.rs'
description = 'Acria Network Node'
edition = '2018'
license = 'Unlicense'
name = 'acria-node'
version = '0.1.1'


[[bin]]
name = 'acria-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
acria-node-runtime = { path = '../runtime', version = '0.1.1' }

# Substrate dependencies
frame-benchmarking = '2.0.1'
frame-benchmarking-cli = '2.0.1'
pallet-transaction-payment-rpc = '2.0.1'
sc-basic-authorship = '0.8.1'
sc-cli = { features = ['wasmtime'], version = '0.8.1' }
sc-client-api = '2.0.1'
sc-consensus = '0.8.1'
sc-consensus-aura = '0.8.1'
sc-executor = { features = ['wasmtime'], version = '0.8.1' }
sc-finality-grandpa = '0.8.1'
sc-rpc = '2.0.1'
sc-rpc-api = '0.8.1'
sc-service = { features = ['wasmtime'], version = '0.8.1' }
sc-transaction-pool = '2.0.1'
sp-api = '2.0.1'
sp-block-builder = '2.0.1'
sp-blockchain = '2.0.1'
sp-consensus = '0.8.1'
sp-consensus-aura = '0.8.1'
sp-core = '2.0.1'
sp-finality-grandpa = '2.0.1'
sp-inherents = '2.0.1'
sp-runtime = '2.0.1'
sp-transaction-pool = '2.0.1'
substrate-frame-rpc-system = '2.0.1'
pallet-contracts = '2.0.1'
pallet-contracts-rpc = '0.8.1'

[features]
default = []
runtime-benchmarks = ['acria-node-runtime/runtime-benchmarks']
